k8s/deployment-beta.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: spreadsheet-binder-beta
  labels:
    app.kubernetes.io/name: beta
    app.kubernetes.io/instance: beta
---
# Service - bi-productive-service
apiVersion: v1
kind: Service
metadata:
  labels:
    run: spreadsheet-binder-beta
  name: spreadsheet-binder-service-beta
  namespace: spreadsheet-binder-beta
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: spreadsheet-binder-beta
  sessionAffinity: None
  type: ClusterIP
---
# Ingress - ingress-pre
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: 'false'
    cert-manager.io/issuer: 'letsencrypt-prod'
  generation: 2
  name: ingress-beta
  namespace: spreadsheet-binder-beta
spec:
  rules:
    - host: spreadsheet-binder-beta.binpar.cloud
      http:
        paths:
          - backend:
              serviceName: spreadsheet-binder-service-beta
              servicePort: 80
            path: /
  tls:
    - hosts:
        - spreadsheet-binder-beta.binpar.cloud
      secretName: spreadsheet-binder-cert-beta
---
# Deploy - bi-productive-deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: spreadsheet-binder-beta
  name: spreadsheet-binder-deploy-beta
  namespace: spreadsheet-binder-beta
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: spreadsheet-binder-beta
  template:
    metadata:
      labels:
        run: spreadsheet-binder-beta
    spec:
      imagePullSecrets:
        - name: pipeline-docker-registry
      containers:
        - image: 402083338966.dkr.ecr.eu-west-1.amazonaws.com/spreadsheet-binder:latest
          name: spreadsheet-binder-beta
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 2
            timeoutSeconds: 5
            periodSeconds: 60
          resources:
            requests:
              memory: '40Mi'
              cpu: '10m'
            limits:
              memory: '100Mi'
              cpu: '100m'
